🐛 Add z-index to footer and fix wrong property

--- a/frontend/src/styles/constants/_z-index.scss
+++ b/frontend/src/styles/constants/_z-index.scss
@@ -1,2 +1,3 @@
 $current-image: 300;
 $global-header: 500;
+$global-footer: 600;
