--- a/frontend/src/styles/layouts/_footer.scss
+++ b/frontend/src/styles/layouts/_footer.scss
@@ -6,8 +6,9 @@
   width: 100%;
   height: 50px;
   box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.1);
+  z-index: $global-footer;
 
-  &:is(.clear, :cloudy) {
+  &:is(.clear, .cloudy) {
     background-color: $clear-01;
   }
 
